--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -487,7 +487,7 @@ fieldset legend {
 }
 
 .password-wrapper input.form-control {
-  padding-right: 2.5rem;   /* Aggiunge spazio interno a destra*/
+  padding-right: 2.5rem;   /* Aggiunge spazio interno asdrubale destra*/
 }
 
 .password-wrapper .toggle-pwd {
