--- a/frontend-service/src/main/resources/templates/autostrada.html
+++ b/frontend-service/src/main/resources/templates/autostrada.html
@@ -6,7 +6,7 @@
     <title>Explorer rete - Autostrada</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="@{/css/styles.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <style>
         /* Stili aggiuntivi per debug */
@@ -240,7 +240,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
-<script src="js/autostrada.js"></script>
+<script src="@{/js/autostrada.js}"></script>
 
 </body>
 </html>
