--- a/frontend-service/src/main/resources/templates/multe.html
+++ b/frontend-service/src/main/resources/templates/multe.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Multe - Gestionale Autostradale</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="@{/css/styles.css}">
 </head>
 <body>
 <header class="topbar py-2 mb-3">
@@ -110,6 +110,6 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/multe.js"></script>
+<script src="@{/js/multe.js}"></script>
 </body>
 </html>
