Gestione della sessione e distinzione tra i ruoli tra impiegato e amministratore

--- a/frontend-service/src/main/resources/templates/dashboard.html
+++ b/frontend-service/src/main/resources/templates/dashboard.html
@@ -89,7 +89,7 @@
     <div class="col-12 col-lg-6">
       <div class="card bg-white p-3">
         <div class="d-flex justify-content-between align-items-center mb-2">
-          <h6 class="mb-0"><a href="/autostrada.html" class="text-decoration-none">Gestisci autostrada</a></h6>
+          <h6 class="mb-0"><a href="/autostrada" class="text-decoration-none">Gestisci autostrada</a></h6>
         </div>
         <div class="table-responsive">
           <table class="table table-sm mb-0">
@@ -108,7 +108,7 @@
     <div class="col-12 col-lg-6">
       <div class="card bg-white p-3">
         <div class="d-flex justify-content-between align-items-center mb-2">
-          <h6 class="mb-0"><a href="/multe.html" class="text-decoration-none">Gestisci multe</a></h6>
+          <h6 class="mb-0"><a href="/multe" class="text-decoration-none">Gestisci multe</a></h6>
         </div>
         <div class="table-responsive">
           <table class="table table-sm mb-0">
