checkpoint per salvo, voglio rimodulare il codice java in modo che sia il microservizio che mi faccia le join e non il lato client

--- a/frontend-service/src/main/resources/templates/autostrada.html
+++ b/frontend-service/src/main/resources/templates/autostrada.html
@@ -213,8 +213,8 @@
                             <select class="form-select mb-2" id="dispTipo">
                                 <option value="" disabled selected>Seleziona tipo</option>
                                 <option value="TELECAMERA">Telecamera</option>
-                                <option value="SENSORE">Totem</option>
-                                <option value="DISPLAY">Sbarra</option>
+                                <option value="TOTEM">Totem</option>
+                                <option value="SBARRA">Sbarra</option>
                             </select>
 
                             <label for="dispStato" class="form-label">Stato</label>
