--- a/frontend-service/src/main/resources/templates/dashboard.html
+++ b/frontend-service/src/main/resources/templates/dashboard.html
@@ -58,7 +58,7 @@
     </div>
     <div class="col-12 col-md-2">
       <div class="p-3 bg-white kpi">
-        <div class="text-muted small">Pagamenti da incassare</div>
+        <div class="text-muted small"Biglietti non pagati</div>
         <div id="kpiPayments" class="value"></div>
       </div>
     </div>
